overflow css fix

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -5,6 +5,9 @@
 .list {
     width: 100%;
     height: 100%;
+}   
+
+.overflow {
     overflow-x: scroll;
 }
 
